bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: not found: value ecriture
  ecriture match {
  ^BDR2:7: error: not found: value ==
    case litMessage()=="R" => droite()
                     ^BDR2:7: error: not found: value litMessage
    case litMessage()=="R" => droite()
         ^BDR2:10: error: not found: value ==
    case litMessage()=="L" => gauche()
                     ^BDR2:10: error: not found: value litMessage
    case litMessage()=="L" => gauche()
         ^BDR2:13: error: not found: value ==
    case litMessage()=="I" => retourne()
                     ^BDR2:13: error: not found: value litMessage
    case litMessage()=="I" => retourne()
         ^BDR2:16: error: not found: value ==
    case litMessage()=="A" => avance()
                     ^BDR2:16: error: not found: value litMessage
    case litMessage()=="A" => avance()
         ^BDR2:18: error: not found: value ==
    case litMessage()=="B" => avance()
                     ^BDR2:18: error: not found: value litMessage
    case litMessage()=="B" => avance()
         ^BDR2:21: error: not found: value ==
    case litMessage()=="C" => avance()
                     ^BDR2:21: error: not found: value litMessage
    case litMessage()=="C" => avance()
         ^BDR2:25: error: not found: value ==
    case litMessage()=="D" => avance()
                     ^BDR2:25: error: not found: value litMessage
    case litMessage()=="D" => avance()
         ^BDR2:30: error: not found: value ==
    case litMessage()=="E" => avance()
                     ^BDR2:30: error: not found: value litMessage
    case litMessage()=="E" => avance()
         ^BDR2:36: error: not found: value ==
    case litMessage()=="F" => avance()
                     ^BDR2:36: error: not found: value litMessage
    case litMessage()=="F" => avance()
         ^BDR2:43: error: not found: value ==
    case litMessage()=="Z" => recule()
                     ^BDR2:43: error: not found: value litMessage
    case litMessage()=="Z" => recule()
         ^BDR2:45: error: not found: value ==
    case litMessage()=="Y" => recule()
                     ^BDR2:45: error: not found: value litMessage
    case litMessage()=="Y" => recule()
         ^BDR2:48: error: not found: value ==
    case litMessage()=="X" => recule()
                     ^BDR2:48: error: not found: value litMessage
    case litMessage()=="X" => recule()
         ^BDR2:52: error: not found: value ==
    case litMessage()=="W" => recule()
                     ^BDR2:52: error: not found: value litMessage
    case litMessage()=="W" => recule()
         ^BDR2:57: error: not found: value ==
    case litMessage()=="V" => recule()
                     ^BDR2:57: error: not found: value litMessage
    case litMessage()=="V" => recule()
         ^BDR2:63: error: not found: value ==
    case litMessage()=="U" => recule()
                     ^BDR2:63: error: not found: value litMessage
    case litMessage()=="U" => recule()
         ^BDR2:72: error: reassignment to val
    fini = true
         ^