bdr.BDR2.scala.code
val fini = false

while(!fini){
  if (estSurMessage()){
    
  ecriture match {
    case litMessage()=="R" => droite()
                avance()
    
    case litMessage()=="L" => gauche()
                avance()
   
    case litMessage()=="I" => retourne()
                avance()
    
    case litMessage()=="A" => avance()
    
    case litMessage()=="B" => avance()
                avance()    
   
    case litMessage()=="C" => avance()
                avance()
                avance()
    
    case litMessage()=="D" => avance()
                avance()
                avance()
                avance()
    
    case litMessage()=="E" => avance()
                avance()
                avance()
                avance()
                avance()
    
    case litMessage()=="F" => avance()
                avance()
                avance() 
                avance()
                avance()
                avance()
    
    case litMessage()=="Z" => recule()
    
    case litMessage()=="Y" => recule()
                recule()
    
    case litMessage()=="X" => recule()
                recule()
                recule()
    
    case litMessage()=="W" => recule()
                recule()
                recule()
                recule()
   
    case litMessage()=="V" => recule()
                recule()
                recule()
                recule()
                recule()
    
    case litMessage()=="U" => recule()
                recule()
                recule()
                recule()
                recule() 
                recule()
    
       } 
   }else {
    fini = true
  }
}